--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
@@ -127,7 +127,7 @@
 		<text name="ConfirmNewPassword">Confirm New Password</text>
 		<text name="PasswordsDoNotMatch">Passwords do not match</text>
 		<text name="PasswordsMustBeAtLeast8CharactersContainLowercaseUppercaseNumber">يجب أن تتكون كلمات المرور من 8 أحرف على الأقل ، وأن تحتوي على أحرف صغيرة وأحرف كبيرة ورقم</text>
-		<text name="UserDeleteWarningMessage">User {0} will be deleted.</text>
+		<text name="UserDeleteWarningMessage">هل انت متأكد من عمليه حذف </text>
 		<text name="RoleDeleteWarningMessage">Role {0} will be deleted and unassigned from all assigned users.</text>
 		<text name="TenantDeleteWarningMessage">Tenant {0} will be deleted.</text>
 		<text name="SearchWithThreeDot">البحث...</text>
