--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
@@ -32,7 +32,7 @@
 		<text name="EditContractor">تعديل </text>
 		<text name="Contractor">المقاول</text>
 		<text name="Contractors">المستخدم</text>
-		<text name="QCUsers">إدارة منسوبي النظام</text>
+		<text name="QCUsers">مدراء النظام</text>
 		<text name="Contract_Name">اسم العقد</text>
 		<text name="ADDRESS">العنوان</text>
 		<text name="CommericalRegisterationNumber">رقم السجل التجاري</text> 
@@ -155,6 +155,11 @@
 		<text name="ResetPasswordStepTwoInfo">2. Copy this random password so you can send it to the user</text>
 		<text name="UsersActivation">Users activation</text>
 		<text name="ProjectList">قائمة المشاريع</text>
+
+		<text name="InspectionTest">الاختبارات</text>
+		<text name="Code">الكود</text>
+		<text name="Cost">التكلفه</text>
+		<text name="IsLabTest">معملي</text>
 		
 	</texts>
 </localizationDictionary>
