--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
@@ -30,7 +30,7 @@
 		<text name="ResponsiblePerson">المسئول</text>
 		<text name="CreateNewContractor">اضافه</text>
 		<text name="EditContractor">تعديل </text>
-		<text name="Contractor">المقاول</text>
+		<text name="Contractor">مقاول</text>
 		<text name="Contractors">المستخدم</text>
 		<text name="QCUsers">مدراء النظام</text>
 		<text name="Contract_Name">اسم العقد</text>
@@ -160,6 +160,23 @@
 		<text name="Code">الكود</text>
 		<text name="Cost">التكلفه</text>
 		<text name="IsLabTest">معملي</text>
-		
+		<text name="Concret">خرسانه</text>
+		<text name="Soil">تربه</text>
+		<text name="Asphalt">أسفلت</text>
+		<text name="InspectionTestTypes">نوع العينه</text>
+		<text name="Requests">الطلبات</text>
+		<text name="ExaminationRequest">طلبات الفحص</text>
+		<text name="InspectionDate">تاريخ الفحص</text>
+		<text name="DistrictName">موقع الفحص</text>
+		<text name="HasSample">يحتوي على عينه</text>
+		<text name="PhoneNumberSiteResponsible1">رقم هاتف المسؤول الأول</text>
+		<text name="PhoneNumberSiteResponsible2">رقم هاتف المسؤول الثاني</text>
+		<text name="MainRequestTypes">نوع الطلب الرئيسي</text>
+		<text name="Inspection">فحص</text>
+		<text name="CONTINUE">استكمال</text>
+		<text name="CreateExaminationRequest">انشاء طلب فحص</text>
+		<text name="ChooseProject">اختر مشروع</text>
+		<text name="SendToConsultant">ارسال الى الاستشاري</text>
+		<text name="DuplicateTest">تم ادخال هذا الاختبار من قبل</text>
 	</texts>
 </localizationDictionary>
