--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
@@ -179,5 +179,6 @@
 		<text name="ProjectName">Project Name</text>
 		<text name="EndProject">EndProject</text>
 		<text name="View">View</text>
+		<text name="AddRequest">Add Request</text>
 </texts>
 </localizationDictionary>
