--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
@@ -183,5 +183,8 @@
 		<text name="RequestCode">Request Code</text>
 		<text name="Status">Status</text>
 		<text name="Approved">Request Approved</text>
+		<text name="RequestRejected">Request Rejected</text>
+		<text name="History">History</text>
+		
 </texts>
 </localizationDictionary>
