--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
@@ -185,6 +185,8 @@
 		<text name="Approved">Request Approved</text>
 		<text name="RequestRejected">Request Rejected</text>
 		<text name="History">History</text>
+		<text name="DuplicateProjectItem">DuplicateProjectItem</text>
+		<text name="ProjectItems">Project Items</text>
 		
 </texts>
 </localizationDictionary>
