- Complete Department Page

--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
@@ -189,6 +189,8 @@
 		<text name="History">History</text>
 		<text name="DuplicateProjectItem">DuplicateProjectItem</text>
 		<text name="ProjectItems">Project Items</text>
+		<text name="Departments">Departments</text>
+		<text name="RelatedAgency">Related Agency</text>
 		
 </texts>
 </localizationDictionary>
