--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
@@ -193,5 +193,7 @@
 		<text name="History">عمليات الطلب</text>
 		<text name="DuplicateProjectItem">تمت إضافه البند من قبل</text>
 		<text name="ProjectItems">بنود المشروع</text>
+		<text name="Departments">الإدارات</text>
+		<text name="RelatedAgency">الجهه التابع لها</text>
 	</texts>
 </localizationDictionary>
