- Add Department to Request

--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
@@ -191,6 +191,9 @@
 		<text name="ProjectItems">Project Items</text>
 		<text name="Departments">Departments</text>
 		<text name="RelatedAgency">Related Agency</text>
+		<text name="ActionName">Action Name</text>
+		<text name="ActionNote">Action Note</text>
+		<text name="CreationDate">Creation Date</text>
 		
 </texts>
 </localizationDictionary>
