--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
@@ -195,5 +195,8 @@
 		<text name="ProjectItems">بنود المشروع</text>
 		<text name="Departments">الإدارات</text>
 		<text name="RelatedAgency">الجهه التابع لها</text>
+		<text name="ActionName">التغيير</text>
+		<text name="ActionNote">الملاحظات</text>
+		<text name="CreationDate">تاريخ الإدخال</text>
 	</texts>
 </localizationDictionary>
