--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab-ar.xml
@@ -9,7 +9,7 @@
 		<text name="StartDate">بدايه المشروع</text>
 		<text name="CompletedDate">تاريخ الانتهاء</text>
 		<text name="SupervisingEngineer">مهندس مشرف</text>
-		<text name="Consultant">استشاري</text>
+		<text name="Consultant">الإستشاري</text>
 		<text name="SiteDelivedDate">تاريخ التسليم</text>
 		<text name="Projects">قائمه المشاريع</text>
 		<text name="ProjectDetails">بيانات المشروع</text>
@@ -186,7 +186,7 @@
 		<text name="View">عرض</text>
 		<text name="RequestCode">رقم الطلب</text>
 		<text name="Status">حاله الطلب</text>
-		<text name="Approved">إستكامل الطلب</text>
+		<text name="Approved">إعتماد الطلب</text>
 		<text name="ApprovedByConsultant">الإستشاري وافق على الطلب</text>
 		<text name="ApprovedBySupervisingQuality">مراقب الجوده وافق على الطلب</text>
 		<text name="Rejected">الطلب مرفوض</text>
