--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
@@ -196,6 +196,7 @@
 		<text name="CreationDate">Creation Date</text>
 		<text name="Approved">Approved</text>
 		<text name="Commetns">Commetns</text>
+		<text name="TypeofTest">Type of Test</text>
 		
 </texts>
 </localizationDictionary>
