--- a/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
+++ b/aspnet-core/src/eConLab.Core/Localization/SourceFiles/eConLab.xml
@@ -195,8 +195,11 @@
 		<text name="ActionNote">Action Note</text>
 		<text name="CreationDate">Creation Date</text>
 		<text name="Approved">Approved</text>
-		<text name="Commetns">Commetns</text>
+		<text name="Commetns">Comments</text>
 		<text name="TypeofTest">Type of Test</text>
+		<text name="SiteReadinessTime">Site Readiness Time</text>
+		<text name="Hours">Hours</text>
+		<text name="Min">Minutes</text>
 		
 </texts>
 </localizationDictionary>
